Ensure ImageBuffer is never used with ImageBitmapRenderingContext

When an HTMLCanvasElement has an ImageBitmapRenderingContext,
calling buffer() will return a buffer that is blank, which is
not the desired result, and triggers the lazy creation of an
persistent buffer that was never used.  This change adds a
DCHECK to catch improper uses, such ase the use case addressed by
https://codereview.chromium.org/2267653005/

BUG=639841

Review-Url: https://codereview.chromium.org/2262363002
Cr-Commit-Position: refs/heads/master@{#413614}

Former-commit-id: 08fd30c773f566dc38208615abb801911808e215